# adjimg

./: Makefile.am  NEWS  adjimg.c  configure.ac
